Add GUI options to remove towns / citizens from ranking

--- a/templates/ajax/admin/towns/explorer.html.twig
+++ b/templates/ajax/admin/towns/explorer.html.twig
@@ -78,7 +78,9 @@
                                                 <option value="{{ url('admin_town_manage', {action: 'advance', id: town.id}) }}">{{ 'Manueller Tageswechsel'|trans({},'admin') }}</option>
                                             {% endif %}
                                         </optgroup>
-                                        <optgroup label="{{ 'Verwaltung'|trans({},'admin') }}">
+                                    {% endif %}
+                                    <optgroup label="{{ 'Verwaltung'|trans({},'admin') }}">
+                                        {% if is_granted("ROLE_ADMIN") %}
                                             <option x-alt-url="{{ path('admin_town_list') }}" value="{{ url('admin_town_manage', {action: 'nullify', id: town.id}) }}">{{ 'Annulieren'|trans({},'admin') }}</option>
                                             {% if town.open %}
                                                 {% if town.password is not null %}
@@ -88,7 +90,16 @@
                                                     <option value="{{ url('admin_town_manage', {action: 'pw_change', id: town.id}) }}" x-query="{{ 'Neues Passwort eingeben.'|trans({},'admin') }}">{{ 'Passwort setzen'|trans({},'admin') }}</option>
                                                 {% endif %}
                                             {% endif %}
-                                        </optgroup>
+                                        {% endif %}
+                                        {% if is_granted("ROLE_CROW") %}
+                                            {% if town.rankingEntry.disabled %}
+                                                <option value="{{ url('admin_town_town_ranking_control', {tid: town.rankingEntry.id, act: 0}) }}">{{ 'Ranking-Ausschluss zurücknehmen'|trans({},'admin') }}</option>
+                                            {% else %}
+                                                <option value="{{ url('admin_town_town_ranking_control', {tid: town.rankingEntry.id, act: 1}) }}">{{ 'Diese Stadt aus dem Ranking ausschließen'|trans({},'admin') }}</option>
+                                            {% endif %}
+                                        {% endif %}
+                                    </optgroup>
+                                    {% if is_granted("ROLE_ADMIN") %}
                                         {% if app.environment == 'dev' %}
                                             <optgroup label="Debug">
                                                 {% set ctz_engaged = 0 %}
