--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -28,9 +28,9 @@ h5 {
 }
 
 h1.page-head {
-	height: 32px; padding: 7px 0 0 48px; margin: 0 0 8px; color: #f0d79e;
+	padding: 7px 0 14px 48px; margin: 0 0 8px; color: #f0d79e;
 	font-size: 1.4rem; line-height: 17px; letter-spacing: 1px; text-transform: uppercase;
-	background-image: url("../img/h1.gif");	background-repeat: no-repeat;
+	background-image: url("../img/h1.gif");	background-repeat: no-repeat; background-position-y: bottom;
 	clear: both;
 }
 
@@ -38,6 +38,16 @@ h1.page-head {
 *.no-interaction { pointer-events: none; }
 
 img.fit { width: 100%; }
+
+ul.feature-list {
+  font-size: 0.8em;
+  strong, b { color: @myhordes-smalltext }
+}
+
+.boxed {
+  border: 1px solid #f0d79e;
+  outline: 1px solid #5c2b20;
+}
 
 .bold { font-weight: bold }
 .italic { font-style: italic  }
