Fix username being underlined in the citizen view

--- a/templates/ajax/game/town/citizen.html.twig
+++ b/templates/ajax/game/town/citizen.html.twig
@@ -81,7 +81,7 @@
                                     </div>
                                 {% endif %}
                             {% endif %}
-                            <a class="link username" href="{{ path('soul_visit', {id: citizen.user.id}) }}"><b class="citizen-name">{{ citizen.name }}</b></a>
+                            <a class="link username undecorated" href="{{ path('soul_visit', {id: citizen.user.id}) }}"><b class="citizen-name">{{ citizen.name }}</b></a>
                             {% if citizen.alive %}
                                 {% for role in citizen.roles %}
                                     {% if not role.secret and not role.hidden %}
