Replaced AP prompt by a small popup

--- a/assets/less/modules/constructions.less
+++ b/assets/less/modules/constructions.less
@@ -206,3 +206,14 @@ ul.tabs {
     }
   }
 }
+
+#ap_prompt {
+  display: none;
+  position: absolute;
+  width: 112px;
+  padding: 4px;
+  background:#3b3249;
+  outline: 1px solid black;
+  border: 2px solid #ddab76;
+  z-index: 9999;
+}
