--- a/templates/ajax/game/town/construction.html.twig
+++ b/templates/ajax/game/town/construction.html.twig
@@ -201,28 +201,69 @@
     <script>
         {% embed "scripts/log.js.twig" %}{% endembed %}
 
-        const send_build_request = function(id) {
+        const send_build_request = function() {
             let ap = null, valid = false;
-            do {
-                ap = window.prompt("{{ 'Wie viele Aktionspunkte möchtest du in den Bau investieren?'|trans({},'game')|e('js') }}", "1");
+            //do {
+               // ap = window.prompt("{{ 'Wie viele Aktionspunkte möchtest du in den Bau investieren?'|trans({},'game')|e('js') }}", "1");
+                ap = document.getElementById("ap_amount").value;
                 if (ap === null) valid = true;
                 else {
                     ap = parseInt(ap);
                     valid = !isNaN(ap) && ap >= 0;
                 }
-            } while (!valid);
+            //} while (!valid);
 
             if (!ap) return;
 
-            $.ajax.easySend( '{{ path('town_constructions_build_controller') }}', {id: id, ap: ap},
+            $.ajax.easySend( '{{ path('town_constructions_build_controller') }}', {id: document.getElementById("prompt_id").value, ap: ap},
                 function () {
-                    $.ajax.load(null, '{{ path('town_constructions') }}', true);
+                    $.ajax.load(null, '{{ path('town_constructions') }}', true, {}, function(){
+                        document.getElementById("ap_prompt").style.display = "";
+                    });
+
             } );
         };
 
         let buttons = document.querySelectorAll('.build-btn[x-building-id]');
         for (let i = 0; i < buttons.length; i++)
-            buttons[i].addEventListener('click', function() { send_build_request( this.getAttribute('x-building-id') ); })
+            buttons[i].addEventListener('click', function() {
+                let prompt = document.getElementById("ap_prompt");
+                if (prompt === null) {
+                    prompt = document.createElement("div");
+                    prompt.id = "ap_prompt";
+
+                    let input = document.createElement("input");
+                    input.setAttribute("type", "number");
+                    input.id = "ap_amount";
+                    input.style.marginBottom = "3px";
+                    input.value = "1";
+                    prompt.append(input);
+
+                    let input_id = document.createElement("input");
+                    input_id.setAttribute("type", "hidden");
+                    input_id.id = "prompt_id";
+                    input_id.value = this.getAttribute('x-building-id');
+                    prompt.append(input_id);
+
+                    let button = document.createElement("button");
+                    button.classList.add("button", "center");
+                    button.innerText = "{{ 'Teilnehmen'|trans({}, 'game') }}";
+                    button.addEventListener("click", function() { send_build_request();});
+                    prompt.append(button);
+
+                    let cancelLink = document.createElement("div");
+                    cancelLink.innerText = "{{ 'Abbrechen'|trans({}, 'global') }}"
+                    cancelLink.classList.add("small", "link", "right");
+                    cancelLink.addEventListener("click", function() {prompt.style.display = "";});
+                    prompt.append(cancelLink);
+
+                    document.body.append(prompt);
+                }
+                document.getElementById("prompt_id").value = this.getAttribute('x-building-id');
+                prompt.style.display = "block";
+                prompt.style.top = (this.getBoundingClientRect().top + document.documentElement.scrollTop) + "px";
+                prompt.style.left = this.getBoundingClientRect().left - prompt.clientWidth + this.clientWidth + "px";
+            });
 
         const send_vote_request = function(id){
             if (!confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}'))
