--- a/templates/scripts/errors/beyond.txt.twig
+++ b/templates/scripts/errors/beyond.txt.twig
@@ -4,7 +4,7 @@
 {{ constant('App\\Controller\\BeyondController::ErrorZoneUnderControl') }}     : '{{'Diese Aktion kann nur in Zonen ausgeführt werden, die von Zombies kontrolliert werden.'|trans({},'game')|e('js')}}',
 {{ constant('App\\Controller\\BeyondController::ErrorAlreadyWounded') }}       : '{{'Du kannst nicht angreifen wenn du bereits verwundet bist.'|trans({},'game')|e('js')}}',
 {{ constant('App\\Controller\\BeyondController::ErrorNotDiggable') }}          : '{{'Du kannst auf dieser Zone nicht graben.'|trans({},'game')|e('js')}}',
-{{ constant('App\\Controller\\BeyondController::ErrorDoorClosed') }}           : '{{'Das Stadttor ist geschlossen!'|trans({},'game')|e('js')}}',
+{{ constant('App\\Controller\\BeyondController::ErrorDoorClosed') }}           : '{{'<strong>Das Stadttor ist geschlossen</strong>, eine Rückkehr ist nicht möglich!'|trans({},'game')|e('js')}}',
 {{ constant('App\\Controller\\BeyondController::ErrorChatMessageInvalid') }}   : '{{'Deine Nachricht muss zwischen 2 und 256 Zeichen haben.'|trans({},'game')|e('js')}}',
 {{ constant('App\\Controller\\BeyondController::ErrorTrashLimitHit') }}        : '{{'Heute wirst du nichts mehr im Müll finden.'|trans({},'game')|e('js')}}',
 {{ constant('App\\Controller\\BeyondController::ErrorNoMovementWhileHiding') }}: '{{'Du kannst dich nicht fortbewegen während du versteckt bist.'|trans({},'game')|e('js')}}',
