--- a/templates/ajax/game/beyond/desert.html.twig
+++ b/templates/ajax/game/beyond/desert.html.twig
@@ -388,15 +388,15 @@
                         {% endtrans %}
                     </div>
                     {% endif %}
-                    <button id="town-enter" {% if not doors_open %}disabled{% endif %}>
-                        {% if zone.x == 0 and zone.y == 0 %}
+                    <button id="town-enter" {% if not doors_open and zone.townZone %}disabled{% endif %}>
+                        {% if zone.townZone %}
                             <img alt="" src="{{ asset('build/images/emotes/arrowright.gif') }}"> {% trans from 'game' %}Stadt betreten{% endtrans %} {% if conf.get(constant('App\\Structures\\TownConf::CONF_FEATURE_ESCORT'),true) and citizen.validLeadingEscorts|length > 0 %}{{ '(Allein)'|trans({}, 'game') }}{% endif %}
                         {% else %}
                             <img class="icon left" alt="" src="{{ asset('build/images/building/small_door_closed.gif') }}" />{% trans from 'game' %}In die Stadt zurückkehren{% endtrans %}
                             <div class="tooltip help">{{ 'Unser verbesserter Wachturm ermöglicht die ungehinderte Rückkehr eines jeden Bürgers, der sich in der Nähe der Stadt befindet!'|trans({},'game') }}</div>
                         {% endif %}
                     </button>
-                    {% if conf.get(constant('App\\Structures\\TownConf::CONF_FEATURE_ESCORT'),true) and citizen.validLeadingEscorts|length > 0 and zone.x == 0 and zone.y == 0 %}
+                    {% if conf.get(constant('App\\Structures\\TownConf::CONF_FEATURE_ESCORT'),true) and citizen.validLeadingEscorts|length > 0 and zone.townZone %}
                         <button id="town-enter-escort" {% if not doors_open %}disabled{% endif %}>
                             <img alt="" src="{{ asset('build/images/emotes/arrowright.gif') }}">
                             {% trans from 'game' %}Stadt betreten{% endtrans %} {% trans from 'game' %}(Mit Eskorte){% endtrans %}
@@ -983,9 +983,9 @@
         {% if allow_enter_town %}
         let townEnterBtn = document.getElementById('town-enter');
         if(townEnterBtn) townEnterBtn.addEventListener('click', function() {
-            {% if not zone.x == 0 or not zone.y == 0 %}
-            if (!confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}'))
-                return;
+            {% if not zone.townZone %}
+                if (!confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}'))
+                    return;
             {% endif %}
             $.ajax.easySend( '{{ path('beyond_desert_exit_controller') }}', {},
                 function () {
