--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -255,6 +255,10 @@ div.tooltip.badge-tooltip {
             .row-flex.custom {
                 background-color:#3b3249;
             }
+
+            .row-flex.event {
+              background-color: @myhordes-green-color;
+            }
             border-bottom: 1px solid #ddab76;
 
             .town-name {
