--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -169,10 +169,10 @@ x-message {
   }
   &>div#modal {
     color: wheat; min-width: 200px; width: auto; max-width: 500px; background-color: #5c2b20;
-    border: 1px solid #b37c4a; outline: 2px solid black; position: relative;
+    border: 1px solid #b37c4a; outline: 2px solid black; position: relative; max-height: 100%; overflow: auto;
 
     div#modal-title {
-      height: 3rem; line-height: 3rem; background-color: rgba(0,0,0,.25); font-weight: bold; font-size: 1.8rem;
+      line-height: 3rem; background-color: rgba(0,0,0,.25); font-weight: bold; font-size: 1.8rem;
       padding: 0 4rem 0 1rem;
       &:empty {display: none}
     }
