--- a/templates/ajax/admin/reports/pn-viewer.html.twig
+++ b/templates/ajax/admin/reports/pn-viewer.html.twig
@@ -29,8 +29,18 @@
                 <div class="modrev modWarnText pointer">
                     <span>{{ '{num} Meldungen. Klicken, um Benutzer anzuzeigen.'|trans({'{num}': post.adminReports(true)|length},'global') }}</span>
                     <div>
+                        {% set complaint_list = [
+                            'Keinen Grund angeben','Cheating','Flooding oder Spam','Verwendung einer anderen als der Stadtsprache',
+                            'Beleidigungen / Unangemessener Ausdruck','Pornographie','Hassrede','Verbreitung persönlicher Informationen',
+                            'Verletzung von Copyright','Aufruf zu Gesetzesverstößen','Ermutigung von Selbstmord oder Selbstverletzung'
+                        ] %}
                         {% for report in post.adminReports(true) %}
-                            <a target="_blank" href="{{ url('soul_visit', {id: report.sourceUser.id}) }}">{{ report.sourceUser.name }}</a>
+                            <div>
+                                <a target="_blank" href="{{ url('soul_visit', {id: report.sourceUser.id}) }}">{{ report.sourceUser.name }}</a>:
+                                {% if report.reason > 0 and report.reason < complaint_list|length %}
+                                    <i>{{ complaint_list[report.reason]|trans({},'global') }}</i>
+                                {% endif %}
+                            </div>
                         {% endfor %}
                     </div>
                 </div>
