--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -646,7 +646,7 @@ button, *.button, *.modal-button {
   &:not(.inline) { display: block; width: 100%; }
 
   &.small {
-    font-size: 1rem; padding: 2px 6px; display: inline-block; min-height: 0;
+    font-size: 1rem; padding: 2px 6px; display: inline-block; min-height: 0; margin:0;
   }
 
   &:not(.small) {
