--- a/templates/ajax/game/town/construction.html.twig
+++ b/templates/ajax/game/town/construction.html.twig
@@ -203,17 +203,11 @@
 
         const send_build_request = function() {
             let ap = null, valid = false;
-            //do {
-               // ap = window.prompt("{{ 'Wie viele Aktionspunkte möchtest du in den Bau investieren?'|trans({},'game')|e('js') }}", "1");
-                ap = document.getElementById("ap_amount").value;
-                if (ap === null) valid = true;
-                else {
-                    ap = parseInt(ap);
-                    valid = !isNaN(ap) && ap >= 0;
-                }
-            //} while (!valid);
+            ap = document.getElementById("ap_amount").value;
+            ap = parseInt(ap);
+            valid = !isNaN(ap) && ap >= 0 && ap <= {{ app.user.activeCitizen.ap }};
 
-            if (!ap) return;
+            if (!ap || !valid) return;
 
             $.ajax.easySend( '{{ path('town_constructions_build_controller') }}', {id: document.getElementById("prompt_id").value, ap: ap},
                 function () {
@@ -242,6 +236,8 @@
                     let input_id = document.createElement("input");
                     input_id.setAttribute("type", "hidden");
                     input_id.id = "prompt_id";
+                    input.setAttribute('min', 1);
+                    input.setAttribute('max', {{ app.user.activeCitizen.ap }});
                     input_id.value = this.getAttribute('x-building-id');
                     prompt.append(input_id);
 
