--- a/templates/ajax/game/town/construction.html.twig
+++ b/templates/ajax/game/town/construction.html.twig
@@ -239,6 +239,7 @@
                     input.setAttribute('min', 1);
                     input.setAttribute('max', {{ app.user.activeCitizen.ap }});
                     input_id.value = this.getAttribute('x-building-id');
+                    input.addEventListener("keyup", function(event) { if(event.key === "Enter") send_build_request()});
                     prompt.append(input_id);
 
                     let button = document.createElement("button");
@@ -260,6 +261,8 @@
                 prompt.style.display = "block";
                 prompt.style.top = (this.getBoundingClientRect().top + document.documentElement.scrollTop) + "px";
                 prompt.style.left = this.getBoundingClientRect().left - prompt.clientWidth + this.clientWidth + "px";
+                document.getElementById("ap_amount").focus();
+                document.getElementById("ap_amount").select();
             });
 
         const send_vote_request = function(id){
