--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -80,6 +80,21 @@
 
   ul,ol {clear:left;}
 
+  ul.poll {
+    .box();
+    line-height: 0; font-size: 0;
+    &>li {
+      list-style: none; position: relative; padding: 10px 3px; margin: 0; line-height: normal; font-size: 1rem;
+      &:not(.plain):before { position: absolute; top: 9px; left: -26px; height: 16px; width: 16px; background: url(../../img/forum/selected.png); content: " "; }
+      &+li { border-top: 1px dotted @myhordes-smalltext; }
+
+      .vote-bar {
+        height: 6px; background: linear-gradient(180deg, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0.2) 100%); overflow: hidden;
+        &>.bar { background: linear-gradient(180deg, #fffb58 0%, #f2c94d 100%); height: 100% }
+      }
+    }
+  }
+
   blockquote {
     font-style: italic; border-color: rgba(0,0,0,.6); border-style: dashed; border-width: 0 0 1px 1px;
     padding-left: 10px; font-size: .875em; opacity: .7;
