--- a/templates/ajax/forum/posts_small.html.twig
+++ b/templates/ajax/forum/posts_small.html.twig
@@ -58,3 +58,13 @@
         <div class="right"><span class="small button" x-ajax-target="default" x-ajax-href="{{ url('forum_thread_view', {fid: fid, tid: tid}) }}" style="width: 12rem;"><img alt="" src="{{ asset('build/images/forum/r_forum.gif') }}"> {{ 'Zum Forum'|trans({},'game') }}</span></div>
     </div>
 {% endblock %}
+{% block js %}
+    {{ parent() }}
+    <script>
+        $.html.forEach('.forum-post-content ul.poll', element => {
+            element.parentElement.insertBefore($.html.createElement('<div class="clear" />'),element);
+            element.parentElement.insertBefore($.html.createElement('<div class="note note-warning" />', '{{ 'Umfragen können an dieser Stelle nicht angezeigt werden. Bitte besuche das Forum.'|trans({},'global') }}'),element);
+            element.remove();
+        });
+    </script>
+{% endblock %}
